--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ footer, header, hgroup, menu, nav, section {
 
 .boxed {
     border: 3px solid black ;
+    border-style: solid;
 	padding: 20px; 
 }
 table {
