--- a/main.css
+++ b/main.css
@@ -36,8 +36,12 @@ footer, header, hgroup, menu, nav, section {
 
 
 .boxed {
-    border: 3px solid black ;
-    border-style: solid;
+    border-width: 3px;
+    border-style: solid; 
+    border-color: black; 
+    
+   /* border: 3px solid black ;
+    border-style: solid; */
 	padding: 20px; 
 }
 table {
