--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ footer, header, hgroup, menu, nav, section {
 
 
 
-.boxed {
+boxed {
     border-width: 3px;
     border-style: solid; 
     border-color: black; 
@@ -46,7 +46,7 @@ footer, header, hgroup, menu, nav, section {
 }
 table {
   font-family: arial, sans-serif;
-  border-collapse: collapse;
+  /* border-collapse: collapse; */
   width: 100%;
 }
 
