--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,44 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
 
+
+
+
+
+
+
+#boxed {
+    
+    border: 3px solid black ;
+	padding: 20px; 
+}
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 body {
 	line-height: 1;
 }
